// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Async Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #6a00ff;
}

.emotion-2:active {
  background-color: #50c;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #C813D5;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover {
  background-color: #9c0fa6;
}

.emotion-5:active {
  background-color: #700b77;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #C813D5;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-9:hover {
  background-color: #9c0fa6;
}

.emotion-9:active {
  background-color: #700b77;
}

.emotion-13 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #C813D5;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-13:hover {
  background-color: #9c0fa6;
}

.emotion-13:active {
  background-color: #700b77;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Sync Action
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async sm
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-9"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async md
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-13"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Async lg
          </span>
        </span>
      </button>
      <div
        className="emotion-8"
      >
        <div>
          Button inner text from event: 
          
        </div>
        <div>
          Fake response: 
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Block Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  width: 100%;
  background-color: #8833FF;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #6a00ff;
}

.emotion-2:active {
  background-color: #50c;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-size: 1rem;
  font-weight: 500;
  color: #8833FF;
  width: 100%;
  background-color: transparent;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(136,51,255,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-7:hover {
  background-color: rgba(136,51,255,0.1);
}

.emotion-7:active {
  background-color: rgba(136,51,255,0.2);
}

.emotion-9 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: #36C152;
  width: 100%;
  background-color: transparent;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-10:hover {
  background-color: rgba(54,193,82,0.1);
}

.emotion-10:active {
  background-color: rgba(54,193,82,0.2);
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            className="emotion-5"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-7"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-9"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-10"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-9"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #FF1744;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #cc1236;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover {
  background-color: #ec254c;
}

.emotion-5:active {
  background-color: #f05472;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #e9a0ee;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover {
  background-color: #df75e6;
}

.emotion-8:active {
  background-color: #d549df;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Red 600
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Magenta 200
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #6a00ff;
}

.emotion-2:active {
  background-color: #50c;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover {
  background-color: #6a00ff;
}

.emotion-5:active {
  background-color: #50c;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover {
  background-color: #6a00ff;
}

.emotion-8:active {
  background-color: #50c;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #36C152;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 0.5;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #36C152;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover {
  background-color: #2b9941;
}

.emotion-5:active {
  background-color: #207130;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #FF1744;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover {
  background-color: #e3002c;
}

.emotion-8:active {
  background-color: #b00022;
}

.emotion-11 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #4945EE;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-11:hover {
  background-color: #1b16ea;
}

.emotion-11:active {
  background-color: #1511bc;
}

.emotion-14 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #0e0e17;
  background-color: #FF6F00;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-14:hover {
  background-color: #cc5900;
}

.emotion-14:active {
  background-color: #994300;
}

.emotion-17 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #246ce5;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-17:hover {
  background-color: transparent;
}

.emotion-17:active {
  background-color: transparent;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Success
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-5"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Success
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Error
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-11"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Info
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-14"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Warning
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-17"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            Link
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #6a00ff;
}

.emotion-2:active {
  background-color: #50c;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #f3eaff;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #f3eaff;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-10 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-19 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-22 {
  fill: #f3eaff;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-22 path {
  fill: #f3eaff;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
          <span
            className="emotion-7"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-10"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
          <span
            className="emotion-19"
          >
            Hello world
          </span>
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-22"
              />
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #C813D5;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover {
  background-color: #9c0fa6;
}

.emotion-1:active {
  background-color: #700b77;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        change me!
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-2:hover {
  background-color: #6a00ff;
}

.emotion-2:active {
  background-color: #50c;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #f3eaff;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-6 path {
  fill: #f3eaff;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-8 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-8:hover {
  background-color: #6a00ff;
}

.emotion-8:active {
  background-color: #50c;
}

.emotion-14 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-14:hover {
  background-color: #6a00ff;
}

.emotion-14:active {
  background-color: #50c;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-2"
        data-testid="button-size-lg"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
          <span
            className="emotion-7"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-8"
        data-testid="button-size-md"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
          <span
            className="emotion-7"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="emotion-14"
        data-testid="button-size-sm"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </span>
          <span
            className="emotion-7"
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #8833FF;
  background-color: transparent;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(136,51,255,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover {
  background-color: rgba(136,51,255,0.1);
}

.emotion-1:active {
  background-color: rgba(136,51,255,0.2);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #fff;
  background-color: #8833FF;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover {
  background-color: #6a00ff;
}

.emotion-1:active {
  background-color: #50c;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Transparent Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #8833FF;
  background-color: transparent;
  padding: 1rem 1rem;
  height: 3.5rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-1:hover {
  background-color: rgba(136,51,255,0.1);
}

.emotion-1:active {
  background-color: rgba(136,51,255,0.2);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    className="emotion-1"
    data-testid="button"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;
